# tlotexteditor

./: CMakeLists.txt  README.md  tlotexteditor.cpp
src/: CMakeLists.txt
tlo/: CMakeLists.txt  texteditor.cpp  texteditor.hpp  texteditor.ui
